Revert dynamic watching
This reverts commit 140edacefc84aa6665301986c407bc926dc3d180.

Revert "0.0.2-dev.11"

This reverts commit 58f5772fce22ac651d1c3da0a328101f2f8141b8.

Revert "."

This reverts commit 87297683ebb07ea98ef00b454690b064da0fc608.

Revert "Merge branch 'main' of https://github.com/tessenjs/type-gen"

This reverts commit 99aa369823b4d69e1db674f3253ef4ef214ce53b, reversing
changes made to 140edacefc84aa6665301986c407bc926dc3d180.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "@tessen/type-gen",
-  "version": "0.0.2-dev.11",
-  "description": "TypeScript type generator for Tessen localization",
+  "version": "0.0.2-dev.9",
+  "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "type": "module",
-  "bin": {
-    "tessen-type-gen": "src/cli.ts"
-  },
   "private": false,
   "scripts": {
-    "build": "tsc",
-    "prepublishOnly": "npm run build"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Kıraç Armağan Önal & Erdem Göksel",
@@ -22,8 +17,6 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "chokidar": "^4.0.3",
-    "commander": "^14.0.0",
     "tessen": "0.0.2-dev.13"
   }
 }
